# opengl-poc

./: .gitignore  .gitmodules  CMakeLists.txt
apps/: CMakeLists.txt  ball.c  ball.h  block.c  block.h  game.c  game.h  level.c  level.h  main.c  main1.c  main2.c  main_.c  main__.c  main___.c  platform.c  platform.h  register.c  register.h  ui.c  ui.h
assets/: otterpop14.txt
assets/shaders/: background.fragment.glsl  background.vertex.glsl  ball.fragment.glsl  block.fragment.glsl  flat_color.fragment.glsl  platform.fragment.glsl  platform.vertex.glsl  position_vert.glsl  sprite.fragment.glsl  sprite.vertex.glsl  test.fragment.glsl  test.vertex.glsl
lib/criterion-2.4.2/: meson.build
lib/glad/: README.MD
lib/glad/include/glad/: glad.h
lib/glad_3_3/src/: glad.c
src/: CMakeLists.txt  assets.c  assets.h  collections.c  collections.h  collision.c  collision.h  common.c  common.h  debug.c  debug.h  input.h  palette.h  render.c  render.h  screen.c  screen.h  shader.c  shader.h  sprite.c  sprite.h  texture.c  texture.h  units.h  viewport.c  viewport.h  window.c  window.h
tests/: CMakeLists.txt  main.c  utils_test.c
